--- a/css/style.css
+++ b/css/style.css
@@ -57,104 +57,128 @@ body {
   background-color: slategrey;
   font-family: Arial, Helvetica, sans-serif;
 }
-body h2 {
+
+h2 {
   border: solid black 2px;
   background-color: rgb(77, 175, 11);
   color: black;
 }
-body .texto-nuestra-tienda {
+
+.texto-nuestra-tienda {
   color: black;
   font-weight: bold;
 }
-body .subtitulo-prod {
+
+.subtitulo-prod {
   background-color: rgb(77, 175, 11);
   border: solid black;
 }
-body .fondo-articulo {
+
+.fondo-articulo {
   background-color: black;
 }
-body .fondo-articulo:hover {
+.fondo-articulo:hover {
   transform: scale(1.05);
 }
-body .fondo-articulo .div-de-cada-articulo {
+
+.div-de-cada-articulo {
   background-color: #343a40;
   color: white;
-  padding: 20px; /* Espaciado interno */
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); /* Sombra */
-  transition: transform 0.2s; /* Transición suave para el efecto hover */
+  padding: 20px;
+  /* Espaciado interno */
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+  /* Sombra */
+  transition: transform 0.2s;
+  /* Transición suave para el efecto hover */
 }
-body .fondo-articulo .div-de-cada-articulo .card-custom:hover {
-  transform: scale(1.05); /* Efecto de aumento al pasar el mouse */
+.div-de-cada-articulo .card-custom:hover {
+  transform: scale(1.05);
+  /* Efecto de aumento al pasar el mouse */
 }
-body .productos-tienda {
+
+.productos-tienda {
   width: 350px;
-  height: 300px; /* Altura fija de 250px */
-  object-fit: cover; /* Asegura que la imagen cubra el área del contenedor sin distorsión */
-  margin: 0 auto; /* Centra la imagen horizontalmente */
-  display: block; /* Asegura que la imagen se comporte como un bloque, lo que permite centrarla */
+  height: 300px;
+  /* Altura fija de 250px */
+  object-fit: cover;
+  /* Asegura que la imagen cubra el área del contenedor sin distorsión */
+  margin: 0 auto;
+  /* Centra la imagen horizontalmente */
+  display: block;
+  /* Asegura que la imagen se comporte como un bloque, lo que permite centrarla */
 }
-body .btn-dark:hover {
+
+.btn-dark:hover {
   background-color: #279b3a;
   transform: scale(1.05);
 }
-body .img-prod {
+
+.img-prod {
   width: 28%;
   height: 200px;
   object-fit: cover;
   margin: 0 auto;
 }
-body .beneficios-section {
+
+.beneficios-section {
   border: solid black;
   background-color: rgb(77, 175, 11);
   margin-bottom: 30px;
 }
-body .beneficios-section ul li {
+
+ul li {
   list-style: none;
   border: solid black 1px;
   color: black;
 }
-body .beneficios-section .contenedor-ayuda {
+
+.contenedor-ayuda {
   border: solid black;
 }
-body .beneficios-section .div-ayuda-html {
+
+.div-ayuda-html {
   background-color: whitesmoke;
   color: black;
   font-weight: bold;
 }
-body .beneficios-section .div-preg-frec ul {
+
+.div-preg-frec ul {
   background-color: white;
 }
-body .beneficios-section .imagen-ayuda {
+
+.imagen-ayuda {
   max-height: 400px;
 }
-body .beneficios-section .parrafo-nosotros-p {
+
+.parrafo-nosotros-p {
   font-weight: bold;
   font-size: 2rem;
 }
-body .beneficios-section .seccion-testimonios-clientes {
+
+.seccion-testimonios-clientes {
   border: 6px solid black;
   background-color: rgba(245, 245, 245, 0.233);
 }
-body .beneficios-section .seccion-testimonios-clientes .subtitulo-testimonios {
+.seccion-testimonios-clientes .subtitulo-testimonios {
   background-color: rgb(77, 175, 11);
   width: 100%;
   margin-top: 16px;
 }
-body .beneficios-section .formulario-testimonios {
-  background-color: rgba(245, 245, 245, 0.233);
-  width: 70%;
+
+.formulario-testimonios {
+  background-color: rgba(245, 245, 245, 0.9);
+  border: 1px solid solid black;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  width: 80%;
   max-width: 900px;
-  padding: 20px;
-  border: 3px solid black;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  overflow: auto;
-  margin-top: 50px;
-  margin-bottom: 25px;
+  margin: 40px auto;
 }
-body .fondo-nosotros {
+
+.fondo-nosotros {
   width: 100%;
-  max-height: 450px;
-  margin-bottom: 12px;
+  height: auto;
+  text-align: center;
 }
 
 .seccion-tienda {
@@ -168,6 +192,7 @@ footer {
   background-color: rgb(77, 175, 11);
   padding: 20px 0;
   text-align: center;
+  width: 100%;
 }
 
 @media (max-width: 575px) {
@@ -189,7 +214,8 @@ footer {
     padding: 5px;
   }
   footer {
-    padding: 10px;
+    width: 100%;
+    background-color: rgb(77, 175, 11);
     text-align: center;
   }
 }
@@ -205,8 +231,9 @@ footer {
     padding: 10px;
   }
   footer {
-    padding: 15px;
     text-align: center;
+    background-color: rgb(77, 175, 11);
+    width: 100%;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
@@ -221,8 +248,9 @@ footer {
     padding: 15px;
   }
   footer {
-    padding: 20px;
     text-align: left;
+    background-color: rgb(77, 175, 11);
+    width: 100%;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -237,8 +265,9 @@ footer {
     padding: 20px;
   }
   footer {
-    padding: 25px;
     text-align: left;
+    background-color: rgb(77, 175, 11);
+    width: 100%;
   }
 }
 @media (min-width: 1200px) {
@@ -253,8 +282,9 @@ footer {
     padding: 25px;
   }
   footer {
-    padding: 30px;
     text-align: left;
+    background-color: rgb(77, 175, 11);
+    width: 100%;
   }
 }
 
