--- a/scss/main.scss
+++ b/scss/main.scss
@@ -76,258 +76,278 @@ header {
 body {
   background-color: $color-fondo;
   font-family: Arial, Helvetica, sans-serif;
+}
 
-  h2 {
-    border: $color-borde 2px;
-    background-color: $color-verde;
+h2 {
+  border: $color-borde 2px;
+  background-color: $color-verde;
+  color: $color-negro;
+}
+
+.texto-nuestra-tienda {
+  color: $color-negro;
+  font-weight: bold;
+}
+
+.subtitulo-prod {
+  background-color: $color-verde;
+  border: $color-borde;
+}
+
+.fondo-articulo {
+  background-color: $color-fondo-articulo;
+
+  &:hover {
+    transform: scale(1.05);
+  }
+}
+
+.div-de-cada-articulo {
+  background-color: #343a40;
+  color: $color-blanco;
+  padding: 20px;
+  /* Espaciado interno */
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+  /* Sombra */
+  transition: transform 0.2s;
+  /* Transición suave para el efecto hover */
+
+  .card-custom:hover {
+    transform: scale(1.05);
+    /* Efecto de aumento al pasar el mouse */
+  }
+}
+
+.productos-tienda {
+  width: 350px;
+  height: 300px;
+  /* Altura fija de 250px */
+  object-fit: cover;
+  /* Asegura que la imagen cubra el área del contenedor sin distorsión */
+  margin: 0 auto;
+  /* Centra la imagen horizontalmente */
+  display: block;
+  /* Asegura que la imagen se comporte como un bloque, lo que permite centrarla */
+}
+
+.btn-dark {
+  &:hover {
+    background-color: $color-verde-hover;
+    transform: scale(1.05);
+  }
+}
+
+.img-prod {
+  width: 28%;
+  height: 200px;
+  object-fit: cover;
+  margin: 0 auto;
+}
+
+.beneficios-section {
+  border: $color-borde;
+  background-color: $color-verde;
+  margin-bottom: 30px;
+}
+  ul li {
+    list-style: none;
+    border: $color-borde 1px;
     color: $color-negro;
   }
 
-  .texto-nuestra-tienda {
+  .contenedor-ayuda {
+    border: $color-borde;
+  }
+
+  .div-ayuda-html {
+    background-color: whitesmoke;
     color: $color-negro;
     font-weight: bold;
   }
 
-  .subtitulo-prod {
-    background-color: $color-verde;
-    border: $color-borde;
-  }
-
-  .fondo-articulo {
-    background-color: $color-fondo-articulo;
-
-    &:hover {
-      transform: scale(1.05);
-    }
-
-    .div-de-cada-articulo {
-      background-color: #343a40;
-      color: $color-blanco;
-      padding: 20px; /* Espaciado interno */
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); /* Sombra */
-      transition: transform 0.2s; /* Transición suave para el efecto hover */
-
-      .card-custom:hover {
-        transform: scale(1.05); /* Efecto de aumento al pasar el mouse */
-      }
+  .div-preg-frec {
+    ul {
+      background-color: $color-blanco;
     }
   }
 
-  .productos-tienda {
-    width: 350px;
-    height: 300px; /* Altura fija de 250px */
-    object-fit: cover; /* Asegura que la imagen cubra el área del contenedor sin distorsión */
-    margin: 0 auto; /* Centra la imagen horizontalmente */
-    display: block; /* Asegura que la imagen se comporte como un bloque, lo que permite centrarla */
-  }
-  .btn-dark {
-    &:hover {
-      background-color: $color-verde-hover;
-      transform: scale(1.05);
-    }
+  .imagen-ayuda {
+    max-height: 400px;
   }
 
-  .img-prod {
-    width: 28%;
-    height: 200px;
-    object-fit: cover;
-    margin: 0 auto;
+  .parrafo-nosotros-p {
+    font-weight: bold;
+    font-size: 2rem;
   }
 
-  .beneficios-section {
-    border: $color-borde;
-    background-color: $color-verde;
-    margin-bottom: 30px;
+  .seccion-testimonios-clientes {
+    border: 6px $color-borde;
+    background-color: rgba(245, 245, 245, 0.233);
 
-    ul li {
-      list-style: none;
-      border: $color-borde 1px;
-      color: $color-negro;
+    .subtitulo-testimonios {
+      background-color: $color-verde;
+      width: 100%;
+      margin-top: 16px;
     }
+  }
 
-    .contenedor-ayuda {
-      border: $color-borde;
-    }
-
-    .div-ayuda-html {
-      background-color: whitesmoke;
-      color: $color-negro;
-      font-weight: bold;
-    }
-
-    .div-preg-frec {
-      ul {
-        background-color: $color-blanco;
-      }
-    }
-
-    .imagen-ayuda {
-      max-height: 400px;
-    }
-
-    .parrafo-nosotros-p {
-      font-weight: bold;
-      font-size: 2rem;
-    }
-
-    .seccion-testimonios-clientes {
-      border: 6px $color-borde;
-      background-color: rgba(245, 245, 245, 0.233);
-
-      .subtitulo-testimonios {
-        background-color: $color-verde;
-        width: 100%;
-        margin-top: 16px;
-      }
-    }
-
-    .formulario-testimonios {
-      background-color: rgba(245, 245, 245, 0.233);
-      width: 70%;
-      max-width: 900px;
-      padding: 20px;
-      border: 3px $color-borde;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      overflow: auto;
-      margin-top: 50px;
-      margin-bottom: 25px;
-    }
+  .formulario-testimonios {
+    background-color: rgba(245, 245, 245, 0.9); // Fondo sutil para el formulario
+    border: 1px solid $color-borde; // Borde con color definido
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); // Sombra suave
+    border-radius: 8px; // Bordes redondeados
+    width: 80%; // Ahora el formulario ocupa un 80% del contenedor
+    max-width: 900px; // Aumento del ancho máximo
+    margin: 40px auto; // Centrado y con margen superior e inferior
   }
 
   .fondo-nosotros {
+    width: 100%; // Hace que el elemento ocupe todo el ancho de la pantalla
+    height: auto; // Ajusta la altura automáticamente según el contenido
+    text-align: center; // Centra el contenido de texto
+  }
+
+  .seccion-tienda {
+    background-color: $color-fondo-articulo;
+    border: $color-borde;
+    color: $color-blanco ;
+  }
+
+  footer {
+    border-top: $color-borde;
+    background-color: $color-verde;
+    padding: 20px 0;
+    text-align: center;
     width: 100%;
-    max-height: 450px;
-    margin-bottom: 12px;
-  }
-}
-
-.seccion-tienda {
-  background-color: $color-fondo-articulo;
-  border: $color-borde;
-  color:$color-blanco ;
-}
-
-footer {
-  border-top: $color-borde;
-  background-color: $color-verde;
-  padding: 20px 0;
-  text-align: center;
-}
-
-// Media Queries para header, body y footer
-
-@media (max-width: 575px) {
-  // Dispositivos móviles
-  header {
-    height: 120px; // Reducir la altura del header
-    padding: 5px 0;
   }
 
-  .logo-pc {
-    width: 60px; // Reducir el tamaño del logo
-  }
+  // Media Queries para header, body y footer
 
-  .navbar-nav {
-    .nav-item {
-      margin: 0 8px; // Reducir margen entre los elementos de navegación
+  @media (max-width: 575px) {
+
+    // Dispositivos móviles
+    header {
+      height: 120px; // Reducir la altura del header
+      padding: 5px 0;
     }
 
-    .nav-link {
-      padding: 8px 12px; // Reducir el padding de los enlaces
+    .logo-pc {
+      width: 60px;
+    }
+
+    .navbar-nav {
+      .nav-item {
+        margin: 0 8px;
+      }
+
+      .nav-link {
+        padding: 8px 12px;
+      }
+    }
+
+    body {
+      font-size: 14px;
+      padding: 5px;
+
+    }
+
+
+
+    footer {
+      width: 100%;
+      background-color: $color-verde;
+
+      text-align: center; // Centrar el texto en pantallas móviles
     }
   }
 
-  body {
-    font-size: 14px;  // Reducir tamaño de fuente en móviles
-    padding: 5px;  // Reducir padding general
+  @media (min-width: 576px) and (max-width: 767px) {
+
+    // Tabletas en modo vertical
+    header {
+      height: 140px; // Ajustar el tamaño del header
+    }
+
+    .logo-pc {
+      width: 70px; // Ajustar tamaño del logo
+    }
+
+    body {
+      font-size: 16px; // Ajustar tamaño de fuente en tablets
+      padding: 10px;
+    }
+
+    footer {
+      text-align: center; // Asegurar que el footer se vea centrado
+      background-color: $color-verde;
+      width: 100%;
+    }
   }
 
-  footer {
-    padding: 10px;
-    text-align: center; // Centrar el texto en pantallas móviles
-  }
-}
+  @media (min-width: 768px) and (max-width: 991px) {
 
-@media (min-width: 576px) and (max-width: 767px) {
-  // Tabletas en modo vertical
-  header {
-    height: 140px; // Ajustar el tamaño del header
-  }
+    // Tabletas en modo horizontal o dispositivos pequeños
+    header {
+      height: 160px; // Ajustar la altura del header
+    }
 
-  .logo-pc {
-    width: 70px; // Ajustar tamaño del logo
-  }
+    .logo-pc {
+      width: 80px;
+    }
 
-  body {
-    font-size: 16px;  // Ajustar tamaño de fuente en tablets
-    padding: 10px;
-  }
+    body {
+      font-size: 18px; // Ajustar tamaño de fuente
+      padding: 15px;
+    }
 
-  footer {
-    padding: 15px;
-    text-align: center; // Asegurar que el footer se vea centrado
-  }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  // Tabletas en modo horizontal o dispositivos pequeños
-  header {
-    height: 160px; // Ajustar la altura del header
+    footer {
+      text-align: left; // Alinear el texto a la izquierda
+      background-color: $color-verde;
+      width: 100%;
+    }
   }
 
-  .logo-pc {
-    width: 80px;
+  @media (min-width: 992px) and (max-width: 1199px) {
+
+    // Pantallas de escritorio pequeñas
+    header {
+      height: 180px;
+    }
+
+    .logo-pc {
+      width: 90px;
+    }
+
+    body {
+      font-size: 20px;
+      padding: 20px;
+    }
+
+    footer {
+      text-align: left;
+      background-color: $color-verde;
+      width: 100%;
+    }
   }
 
-  body {
-    font-size: 18px;  // Ajustar tamaño de fuente
-    padding: 15px;
-  }
+  @media (min-width: 1200px) {
 
-  footer {
-    padding: 20px;
-    text-align: left; // Alinear el texto a la izquierda
-  }
-}
+    header {
+      height: 200px;
+    }
 
-@media (min-width: 992px) and (max-width: 1199px) {
-  // Pantallas de escritorio pequeñas
-  header {
-    height: 180px;
-  }
+    .logo-pc {
+      width: 100px;
+    }
 
-  .logo-pc {
-    width: 90px;
-  }
+    body {
+      font-size: 22px;
+      padding: 25px;
+    }
 
-  body {
-    font-size: 20px;
-    padding: 20px;
+    footer {
+      text-align: left;
+      background-color: $color-verde;
+      width: 100%;
+    }
   }
-
-  footer {
-    padding: 25px;
-    text-align: left; 
-  }
-}
-
-@media (min-width: 1200px) {
-  
-  header {
-    height: 200px;
-  }
-
-  .logo-pc {
-    width: 100px;
-  }
-
-  body {
-    font-size: 22px;
-    padding: 25px; 
-  }
-
-  footer {
-    padding: 30px;
-    text-align: left; 
-  }
-}
