complete la seccion de scss

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,8 +11,7 @@ $color-borde: solid black;
 
 header {
   background-color: rgba(0, 0, 0, 0.747);
-  padding: 10px 0;
-  height: 150px;
+  height: 150px;}
 
   .logo-pc {
     width: 80px;
@@ -23,7 +22,7 @@ header {
     color: $color-blanco;
     font-weight: bold;
   }
-}
+
 
 .navbar {
   box-shadow: 0 2px 5px rgb(0, 0, 0);
