--- a/scss/pages/_tienda.scss
+++ b/scss/pages/_tienda.scss
@@ -1,3 +1,10 @@
+
+.seccion-tienda {
+  background-color: $color-fondo-articulo;
+  border: $color-borde;
+  color: $color-blanco ;
+}
+
 .div-de-cada-articulo {
   background-color: #343a40;
   color: $color-blanco;
