--- a/scss/components/_img.scss
+++ b/scss/components/_img.scss
@@ -1,9 +1,14 @@
 .productos-tienda {
-  width: 45%; /* El ancho es 45% del contenedor padre */
-  height: 250px; /* Altura fija de 250px */
-  object-fit: cover; /* Asegura que la imagen cubra el área del contenedor sin distorsión */
-  margin: 0 auto; /* Centra la imagen horizontalmente */
-  display: block; /* Asegura que la imagen se comporte como un bloque, lo que permite centrarla */
+  width: 45%;
+  /* El ancho es 45% del contenedor padre */
+  height: 250px;
+  /* Altura fija de 250px */
+  object-fit: cover;
+  /* Asegura que la imagen cubra el área del contenedor sin distorsión */
+  margin: 0 auto;
+  /* Centra la imagen horizontalmente */
+  display: block;
+  /* Asegura que la imagen se comporte como un bloque, lo que permite centrarla */
 }
 
 .img-prod {
@@ -17,4 +22,9 @@
   width: 100%;
   max-height: 450px;
   margin-bottom: 12px;
+}
+
+
+.imagen-ayuda {
+  max-height: 400px;
 }
