agregue una seccion en testimonios.html

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -231,7 +231,7 @@ footer {
 
 @media (min-width: 992px) and (max-width: 1199px) {
 
-  // Pantallas de escritorio pequeñas
+  // Pantallas de escritorio chicas
   header {
     height: 180px;
   }
