--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -3,3 +3,8 @@
     height: auto; // Ajusta la altura automáticamente según el contenido
     text-align: center; // Centra el contenido de texto
   }
+
+  .parrafo-nosotros-p {
+    font-weight: bold;
+    font-size: 2rem;
+  }
